added opensl sink block. Seems to work great.

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -18,5 +18,6 @@
 # Boston, MA 02110-1301, USA.
 
 install(FILES
-    grand_sensor0.xml DESTINATION share/gnuradio/grc/blocks
+    grand_sensor0.xml
+    grand_opensl_source.xml DESTINATION share/gnuradio/grc/blocks
 )
