--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -42,3 +42,4 @@ include(GrTest)
 set(GR_TEST_TARGET_DEPS gnuradio-grand)
 set(GR_TEST_PYTHON_DIRS ${CMAKE_BINARY_DIR}/swig)
 GR_ADD_TEST(qa_sensor0 ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sensor0.py)
+GR_ADD_TEST(qa_opensl_source ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_opensl_source.py)
