sensors: improved code handling sensors.
sensor0: accelerometer
sensor1: light sensor

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -19,5 +19,6 @@
 
 install(FILES
     grand_sensor0.xml
-    grand_opensl_source.xml DESTINATION share/gnuradio/grc/blocks
+    grand_opensl_source.xml
+    grand_sensor1.xml DESTINATION share/gnuradio/grc/blocks
 )
