--- a/include/grand/CMakeLists.txt
+++ b/include/grand/CMakeLists.txt
@@ -24,5 +24,6 @@ install(FILES
     api.h
     sensor0.h
     opensl_sink.h
-    opensl_source.h DESTINATION include/grand
+    opensl_source.h
+    sensor1.h DESTINATION include/grand
 )
