sensor: made sensor base class to handle the common init/settings and stuff.
sensor0 and sensor1 inherit from sensor_base and tell it what type of sensor they are. Only real diff is the number of output ports.

--- a/include/grand/CMakeLists.txt
+++ b/include/grand/CMakeLists.txt
@@ -22,8 +22,10 @@
 ########################################################################
 install(FILES
     api.h
+    sensor_base.h
     sensor0.h
+    sensor1.h
     opensl_sink.h
     opensl_source.h
-    sensor1.h DESTINATION include/grand
+    DESTINATION include/grand
 )
