--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -27,10 +27,11 @@ link_directories(${Boost_LIBRARY_DIRS})
 
 list(APPEND grand_sources
     sensor_base.cc
-    sensor0_impl.cc
-    sensor1_impl.cc
+    accelerometer_impl.cc
+    light_sensor_impl.cc
     opensl_sink_impl.cc
     opensl_source_impl.cc
+    float_array_impl.cc
 )
 
 list(APPEND GRAND_LIBS
